crates/shingetsu-compiler/tests/compile_fail/enum_unit_variant.stderr
error: FromLua/IntoLua derive on enums does not support unit variants
 --> tests/compile_fail/enum_unit_variant.rs:5:5
  |
5 |     Nothing,
  |     ^^^^^^^
